[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/BloodieCurseRegular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/UI/BubbleRectXeno.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/LineProfileXeno.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/LineProfileTaperXeno.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SpeechBubble.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 1.72467, -0.669518, 147.691, 150.26 )
margin_left = 34.6753
margin_right = 42.381
margin_top = 35.9596
margin_bottom = 42.381
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="DynamicFont" id=2]
size = 25
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.00236967, 0.990991 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0135136 ), 0.0, 0.0, 0, 0 ]

[node name="SpeechBubble" type="Control"]
script = ExtResource( 5 )

[node name="BubbleMargin" type="MarginContainer" parent="."]
margin_top = -22.0
margin_right = 67.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bubble" type="Panel" parent="BubbleMargin"]
margin_right = 67.0
margin_bottom = 107.0
custom_styles/panel = SubResource( 3 )

[node name="TextMargin" type="MarginContainer" parent="BubbleMargin"]
margin_right = 67.0
margin_bottom = 107.0

[node name="Text" type="Label" parent="BubbleMargin/TextMargin"]
margin_top = 13.0
margin_right = 67.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.870588, 1, 0.396078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Text goes here"
align = 1
autowrap = true

[node name="Tails" type="Control" parent="."]

[node name="TailBoxConnector" type="Line2D" parent="Tails"]
position = Vector2( 109, 181 )
points = PoolVector2Array( -82, -73, -74, -50 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )
texture_mode = 1

[node name="TailPointer" type="Line2D" parent="Tails"]
position = Vector2( 177, 183 )
points = PoolVector2Array( -54, -75, -49, -50 )
width = 15.0
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 4 )
texture_mode = 2
